--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@reduxjs/toolkit": "^2.10.1",
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.13.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.344.0",
+    "npm": "^11.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/axios": "^0.9.36",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
