--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@reduxjs/toolkit": "^2.10.1",
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.25",
     "install": "^0.13.0",
     "lucide-react": "^0.344.0",
     "npm": "^11.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1"
